added font family

--- a/invoice.html
+++ b/invoice.html
@@ -4,6 +4,10 @@
         color: inherit;
     }
 
+    * {
+        font-family: -apple-system, BlinkMacSystemFont, sans-serif !important;
+    }
+
     .ritz .waffle .s34 {
         border-bottom: 1px SOLID transparent;
         /* border-right: 1px SOLID transparent; */
